css/file_browser.view.css
/**
 * @file file_browser.view.css
 */

/* Generic styles */

.grid {
  padding-bottom: 50px;
}

.grid .pager {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.grid-item {
  width: 350px;
  display: block;
  text-align: center;
}

.grid-item img {
  width: 350px;
}

.grid-item img::selection {
  background: transparent;
}

.grid-item .views-field-entity-browser-select {
  display: none;
}

.grid-item:after {
  content: " ";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  background: transparent url("/core/misc/icons/73b355/check.svg") no-repeat center center;
  background-size: 0;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.grid-item.checked:after {
  background-size: 80px 80px;
}

.grid-item-info {
  position: absolute;
  width: 100%;
  bottom: 5px;
  background-color: rgba(0,0,0,.5);
}

.grid-item-info-left,.grid-item-info-right {
  padding: 5px;
  color: white;
}

.grid-item-info-left {
  float: left;
}

.grid-item-info-right {
  float: right;
}

.entity-browser-browse-files-form {
  position: relative;
  padding-bottom: 50px;
}

/* Remove border above tabs. */
.entity-browser-browse-files-form .is-collapse-enabled .tabs:before, .entity-browser-browse-files-form .is-horizontal .tabs:before {
  background-color: transparent;
}

input[type="submit"][name="filter"] {
  margin-left: 10px;
  margin-top: 30px;
}

/* Float submit button over browser. */
.file-browser-actions {
  position: absolute;
  bottom: 0;
  background: white;
  height: 30px;
  width: 100%;
  padding: 10px 0 10px 0;
  z-index: 100;
}

.layout-container {
  margin: 0;
}

